# renamer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
src/renamer/: __init__.py  __main__.py  cli.py  engine.py  logger.py  rules.py
