[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "renamer"
version = "0.1.0"
description = "A command-line tool for batch-renaming files using composable rules."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jez Hailwood" },
]
dependencies = [
    "typer",
    "rich",
]

[project.urls]
Documentation = "https://jezhailwood.github.io/renamer"
Repository = "https://github.com/jezhailwood/renamer"
Issues = "https://github.com/jezhailwood/renamer/issues"

[project.scripts]
renamer = "renamer.cli:app"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "D", # pydocstyle
    "D401", # pydocstyle: non-imperative-mood
]

[tool.ruff.lint.per-file-ignores]
"src/renamer/cli.py" = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"
